# FuzzyVisualEncoding

./: .gitignore  README.md  plotfuzzyresultCategory.py  plotfuzzyresultDataset.py  plotfuzzyresultdictsize.py  pyproject.toml  requirements.txt  writeCategoryVector.py  writeFeatureVector.py  writePCAfeature.py
matlab/: CatFuzzyClass.m  calcFuzzyClassPerf.m  calcFuzzyCoeff.m  calcFuzzyDict.m  callCompFuzzyClassPerf.m  callCompFuzzyCoeff.m  callCompFuzzyCoeffCrossVal.m  compFuzzyClassPerf.m  compFuzzyClassPerfCrossVal.m  compFuzzyCoeff.m  graphFuzzyCoeffPerf.m  graphfuzzyperf.m  plotfuzzydict.m
scripts/: _legacy_fcluster.py  _legacy_plotfuzzyresultCategory.py  _legacy_plotfuzzyresultdictsize.py  _legacy_writeCategoryVector.py  extract_feature_vectors.py  extract_pca_features.py  plot_results.py  pool_feature_vectors.py
src/fuzzy_visual_encoding/: __init__.py  _legacy_monolith.py  algorithms.py  classification.py  cli.py  dictionary.py
tests/: test_algorithms.py  test_classification.py  test_dictionary.py
