[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "fuzzy-visual-encoding"
version = "0.1.0"
description = "Fuzzy visual encoding for image classification using Gustafson-Kessel and Gath-Geva clustering"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashish Gupta" }]
requires-python = ">=3.10"
keywords = [
    "fuzzy-clustering",
    "computer-vision",
    "bag-of-features",
    "gustafson-kessel",
    "gath-geva",
    "image-classification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.8",
]

[project.scripts]
fuzzy-encode = "fuzzy_visual_encoding.cli:main"

[project.urls]
Homepage = "https://github.com/ashish-code/FuzzyVisualEncoding"
Repository = "https://github.com/ashish-code/FuzzyVisualEncoding"
Paper = "https://ieeexplore.ieee.org/document/6467459"

# ---------------------------------------------------------------------------
# Hatchling build — src layout
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzy_visual_encoding"]

# ---------------------------------------------------------------------------
# uv — tool configuration
# ---------------------------------------------------------------------------

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.8",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src/fuzzy_visual_encoding"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
